--- a/style.less
+++ b/style.less
@@ -2,7 +2,7 @@ body {
     font: 18px "Open Sans Condensed";
     margin: 0;
     padding: 0;
-    background: #888;
+    background: #999;
 };
 
 .transform (@arg) {
@@ -27,7 +27,7 @@ body {
     left: 0em;
     width: 18em;
     height: 1.5em;
-    background: rgba(255,255,255,0.9);
+    background: rgba(255,255,255,0.95);
     box-shadow: -0.2em 0.2em 0.5em rgba(0,0,0,0.4);
     .transform(rotate(270deg));
 };
@@ -38,14 +38,17 @@ h1 {
     text-align: center;
 }
 
-section {
+.slide {
     margin: 0;
     padding: 0;
     position: absolute;
-    top: 1em;
-    left: 2.5em;
+    top: 50%;
+    left: 50%;
     width: 18em;
     height: 18em;
     background: rgba(255,255,255,0.9);
     box-shadow: 0.2em 0.2em 0.5em rgba(0,0,0,0.4);
+    transition: 2s;
+    -webkit-transition: 2s;
+    .transform(scale(0.01, 0.01));
 }
