--- a/public/slidestyle.css
+++ b/public/slidestyle.css
@@ -4,19 +4,14 @@
  * 
  * Copyright (C) 2011-2012 Hakim El Hattab, http://hakim.se
  */
-@font-face {
-  font-family: 'League Gothic';
-  src: url("../../lib/font/league_gothic-webfont.eot");
-  src: url("../../lib/font/league_gothic-webfont.eot?#iefix") format("embedded-opentype"), url("../../lib/font/league_gothic-webfont.woff") format("woff"), url("../../lib/font/league_gothic-webfont.ttf") format("truetype"), url("../../lib/font/league_gothic-webfont.svg#LeagueGothicRegular") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
 
 /*********************************************
  * GLOBAL STYLES
  *********************************************/
 body {
-  background: #1c1e20;
+  background: #fff8f8;
+  font-family: Ubuntu, sans-serif;
+  /*
   background: -moz-radial-gradient(center, circle cover, #555a5f 0%, #1c1e20 100%);
   background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, #555a5f), color-stop(100%, #1c1e20));
   background: -webkit-radial-gradient(center, circle cover, #555a5f 0%, #1c1e20 100%);
@@ -24,6 +19,7 @@ body {
   background: -ms-radial-gradient(center, circle cover, #555a5f 0%, #1c1e20 100%);
   background: radial-gradient(center, circle cover, #555a5f 0%, #1c1e20 100%);
   background-color: #2b2b2b;
+  */
 }
 
 .reveal {
@@ -31,7 +27,7 @@ body {
   font-size: 48px;
   font-weight: 200;
   letter-spacing: -0.02em;
-  color: #eeeeee;
+  color: #011;
 }
 
 ::selection {
@@ -50,7 +46,7 @@ body {
 .reveal h5,
 .reveal h6 {
   margin: 0 0 20px 0;
-  color: #eeeeee;
+  /*color: #002200;*/
   font-family: "League Gothic", Impact, sans-serif;
   font-family: Ubuntu, sans-serif;
   line-height: 0.9em;
@@ -66,8 +62,11 @@ body {
 /*********************************************
  * LINKS
  *********************************************/
+.reveal a {
+  color: #ccccff;
+}
 .reveal a:not(.image) {
-  color: #13daec;
+  /*color: #13daec;*/
   text-decoration: none;
   -webkit-transition: color .15s ease;
   -moz-transition: color .15s ease;
@@ -77,13 +76,13 @@ body {
 }
 
 .reveal a:not(.image):hover {
-  color: #71e9f4;
+  /*color: #71e9f4;*/
   text-shadow: none;
   border: none;
 }
 
 .reveal .roll span:after {
-  color: #fff;
+  /*color: #fff;*/
   background: #0d99a5;
 }
 
@@ -104,7 +103,7 @@ body {
 
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
-  border-color: #13daec;
+  /*border-color: #13daec;*/
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.55);
 }
 
@@ -164,5 +163,5 @@ body {
 }
 .reveal ul li {
   line-height: 0.95em;
-    margin: .2em;
+    margin: .5em;
 }
