--- a/slidestyle.css
+++ b/slidestyle.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic);
+@import url(http://fonts.googleapis.com/css?family=Ubuntu:400,400italic);
 /**
  * Default theme for reveal.js.
  * 
